@@ -1,3 +1,8 @@
+2002-05-02  James Henstridge  <james@daa.com.au>
+
+	* modules/fstype.c: get rid of some warnings that were preventing
+	it from compiling due to -Werror
+
 2002-05-01  Jody Goldberg <jody@gnome.org>
 
 	* test/test-info.c (main) : add a test for is_local.
